--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "Example GraphQL API.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "test"
+    "start": "nodemon -e js,graphql index.js",
+    "test": "test",
+    "db:create": "node node_modules/db-migrate/bin/db-migrate db:create forum --config ./database.json -e local-setup",
+    "db:drop": "node node_modules/db-migrate/bin/db-migrate db:drop forum --config ./database.json -e local-setup",
+    "db:up": "node node_modules/db-migrate/bin/db-migrate up --config ./database.json -e local",
+    "db:down": "node node_modules/db-migrate/bin/db-migrate down --config ./database.json -e local",
+    "db:reset": "npm run db:drop && npm run db:setup",
+    "db:migration": "node node_modules/db-migrate/bin/db-migrate create --sql-file --config ./database.json",
+    "db:setup": "npm run db:create && npm run db:up"
   },
   "author": "Ed Colyer",
   "license": "ISC",
   "dependencies": {
+    "db-migrate": "^0.11.6",
+    "db-migrate-pg": "^1.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
-    "nodemon": "^1.19.1"
+    "knex": "^0.19.0",
+    "nodemon": "^1.19.1",
+    "pg": "^7.11.0"
   }
 }
