--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Ed Colyer",
   "license": "ISC",
   "dependencies": {
+    "camelize": "^1.0.0",
     "db-migrate": "^0.11.6",
     "db-migrate-pg": "^1.0.0",
     "express": "^4.17.1",
