--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "Ed Colyer",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.8.1",
     "camelize": "^1.0.0",
     "db-migrate": "^0.11.6",
     "db-migrate-pg": "^1.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
+    "graphql-voyager": "^1.0.0-rc.27",
     "knex": "^0.19.0",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0"
