--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
+    "graphql-iso-date": "^3.6.1",
     "graphql-voyager": "^1.0.0-rc.27",
-    "knex": "^0.19.0",
+    "knex": "^0.19.1",
+    "lodash": "^4.17.15",
+    "moment-timezone": "^0.5.26",
     "nodemon": "^1.19.1",
-    "pg": "^7.11.0"
+    "pg": "^7.12.0"
   }
 }
